# nRF_tests

./: .gitignore  README.md
app/: CMakeLists.txt
app/src/: constants.h  fsm.c  fsm.h  main.c
apps_ncs/fsm_app/: CMakeLists.txt
apps_ncs/fsm_app/src/: constants.h  fsm.h  main.c
apps_ncs/ml_test/: README.md  prj.conf
apps_ncs/ml_test/src/: main.cpp
apps_sdk/blinky/: main.c
apps_sdk/blinky/pca10040/s132/armgcc/: Makefile
apps_sdk/blinky_cmake/: CMakeLists.txt  script.sh
apps_sdk/blinky_cmake/pca10040/s132/config/: sdk_config.h
apps_sdk/edge_impulse_lib/: Makefile
apps_sdk/ml_make_2/pca10040/s132/armgcc/: Makefile
my_test/src/: main.c
ncs_projects/apps/fsm_app/: prj.conf
ncs_projects/apps/ml_test/: prj.conf
ncs_projects/apps/sensor_test/: CMakeLists.txt  prj.conf
ncs_projects/apps/sensor_test/boards/: nrf52dk_custom_berg_1.overlay
ncs_projects/apps/sensor_test/src/: main.c
ncs_projects/boards/: README.md
ncs_projects/boards/arm/custom_berg_1/: Kconfig  Kconfig.board  Kconfig.defconfig  nrf52dk_custom_berg_1.dts  nrf52dk_custom_berg_1.yaml  nrf52dk_custom_berg_1_defconfig
ncs_projects/drivers/icm20948/: README.md  invensense,icm20948.yaml
ncs_projects/drivers/icm20948/icm20948/: CMakeLists.txt  Kconfig  icm20948.c  icm20948.h
ncs_projects/tests/test_fsm_1/: CMakeLists.txt  testcase.yaml
ncs_projects/tests/test_fsm_2/: CMakeLists.txt  testcase.yaml
ncs_projects/tests/test_fsm_2/src/: test.c  test.h
tests/test_fsm_1/: sample.yaml
tests/test_fsm_1/src/: test.c
tests/test_fsm_2/src/: test.c
